[package]
name = "do-not-use-test-crate-123"
version = "0.1.0"
edition = "2021"
description = "do-not-use-test-crate-123"
license = "MIT"
documentation = "README.md"
homepage = "https://github.com/lukehinds/do-not-use-test-crate-123"
repository = "https://github.com/lukehinds/do-not-use-test-crate-123"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a1 = "0.1.1"
